# GeometrySlash

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  windows-cross.cmake
.github/workflows/: cmakebuild.yml
src/: button.cpp  button.h  gamestate.cpp  gamestate.h  globals.h  ingame.cpp  ingame.h  leaderboard.cpp  leaderboard.h  main.cpp  mainmenu.cpp  mainmenu.h  network.cpp  network.h  random.cpp  random.h  resultsscreen.cpp  resultsscreen.h
